<resources>
    <string name="app_name">ContactApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Ingin kontakmu tersimpan dengan aman? Yuk daftar sekarang!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story App!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="message_login_page">Isi datamu dulu ya!</string>
    <string name="title_login_page">Sudah siap untuk menyimpan kontakmu?</string>
    <string name="name">Nama</string>
    <string name="description">Lorem Ipsum</string>
    <string name="message_main_page">Selamat Datang di ContactApp!.</string>
    <string name="logout">Keluar</string>
    <string name="pass_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="email_error">Email harus mengandung @gmail.com</string>
    <string name="gallery_button">Gallery</string>
    <string name="camera_button">Camera</string>
    <string name="add_story_desc">Masukkan deskripsi cerita anda</string>
    <string name="upload">Upload</string>
    <string name="error_occured">Mohon maaf, terjadi error</string>
    <string name="registered_email">Email tersebut sudah terdaftar. Yuk coba pakai email lain!</string>
    <string name="login_success">Anda berhasil login. Yuk mulai simpan kontak kamu!</string>
    <string name="acc_not_found">Sepertinya akun kamu belum terdaftar. Yuk daftar dulu!</string>
    <string name="field_not_filled">Ada yang belum kamu isi nih, yuk di cek lagi!</string>
    <string name="email">Email</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="no_account">Belum punya akun? </string>
    <string name="first_name">Nama Depan</string>
    <string name="add_new_contact_title">Tambah Kontak Baru</string>
    <string name="last_name_opt">Nama Belakang (Opsional)</string>
    <string name="last_name">Nama Belakang</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="save">Simpan</string>
    <string name="contacts_name">%1$s %2$s</string>
    <string name="contacts_email">Email: %1$s</string>
    <string name="contacts_phoneNum">Nomor Telepon: %1$s</string>
    <string name="edit_kontak">Edit Kontak</string>
    <string name="has_account">Sudah punya akun?</string>
    <string name="belum_terdapat_kontak_yang_disimpan">Belum terdapat kontak yang disimpan \nApakah Anda ingin mulai menambahkan kontak?</string>
    <string name="not_filled_required">%1$s belum kamu isi</string>
    <string name="wrong_account_details">Password atau username salah atau mungkin akun kamu belum terdaftar</string>
    <string name="add_contact_success">Berhasil menambahkan kontak</string>
    <string name="add_contact_failed">Gagal menambahkan kontak</string>
</resources>