<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:backgroundTint="#F8F4E1"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_item_phoneNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contacts_phoneNum"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <TextView
            android:id="@+id/tv_item_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/contacts_email"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_phoneNum"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/contacts_edit_btn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_edit_24"
            app:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/contacts_delete_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/contacts_delete_btn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ic_delete_outline_24"
            app:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>